k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eduplatform
  labels:
    name: eduplatform
